- added API method "void swapDimensions(String, String)" to FormatReader - fixed initialization bug in LeicaReader